fix Pi connect wallet

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
   <h1>CTFPROPERTY</h1>
 
   <button onclick="connectPi()">Connect Pi Wallet</button>
-  <br><br>
+<br><br>
+<button onclick="payWithPi()">Pay 1 Pi</button>
 
-  <button onclick="payWithPi()">Pay 1 Pi</button>
+<pre id="output">Waiting...</pre>
 
-  <pre id="output">Waiting...</pre>
+<script src="https://sdk.minepi.com/pi-sdk.js"></script>
+<script src="app.js"></script>
 
-  <script src="app.js"></script>
-</body>
-</html>
